objects/AutoTUParams__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Cron_Queuer_Job__c</fullName>
        <label>Cron Queuer Job</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cron_Sender_Job__c</fullName>
        <label>Cron Sender Job</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Url__c</fullName>
        <label>Login Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OAuth_Client_ID__c</fullName>
        <label>OAuth Client ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OAuth_Client_Secret__c</fullName>
        <label>OAuth Client Secret</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Automated Testing Parameters</label>
</CustomObject>